--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="utf-8">
     <title>Getting Started</title>
     <link rel="stylesheet" href="https://vectorjs.org/library.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div id="time-circle"></div>
+    <div class="form-group">
+      <form id="form" style="display: block; position: absolute; top: 300px; left: 800px;"></form>
+    </div>
     <script type="module" src="script.js"></script>
   </body>
 </html>
